# CellProfiler

./: -.spec  .cvsignore  .gitattributes  .gitignore  .travis.yml  3D to 2D.ipynb  AUTHORS  AlgIdentifyPrimDistDist.m  AlgMeasureAreaShapeIntensTxtr.m  AlgSaturationBlurCheck.m  AlgSaturationCheck.m  AlgTestVariableBoxes.m  AviToImageSlices.m  BOILERPLATE  BatchRunner.py  BuildCPCluster.m  BuildCPClusterSingle.m  BuildCPClusterSingle.sh  BuildCellProfiler.m  CITATION  CODE_OF_CONDUCT.md  CONDUCT  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  CPCluster.m  CPCluster.py  CPClusterSingle.m  CPClusterSingle.py  CPConvertSQL.m  CPFixAspectRatio.m  CPInstallGuide.m  CPInteractiveZoom.m  CPaverageimages.m  CPfigure.m  CPgetfeature.m  CPgraythresh.m  CPimread.m  CPmsgbox.m  CPquestdlg.m  (+144 more)
Help/: Help1.m  (+39 more)
src/frontend/: README.md  environment.yml  pyproject.toml  setup.py
src/frontend/cellprofiler/: __init__.py  __main__.py
src/frontend/cellprofiler/data/help/: display_menu_bar.rst  other_batch.rst  other_omero.rst  output_measurements.rst
src/frontend/cellprofiler/data/icons/: CellProfiler.ai
src/frontend/cellprofiler/gui/: __init__.py  _welcome_frame.py  addmoduleframe.py  app.py  checkupdate.py  cpframe.py  dialog.py  editobjectsdlg.py  errordialog.py  menu.py  omerologin.py  parametersampleframe.py  pathlist.py  pipelinecontroller.py  pipelinelistview.py  plateviewer.py  regexp_editor.py
src/frontend/cellprofiler/gui/constants/: figure.py
src/frontend/cellprofiler/gui/figure/: _figure.py  _navigation_toolbar.py
src/frontend/cellprofiler/gui/help/: __init__.py  content.py  menu.py  search.py
src/frontend/cellprofiler/gui/html/: getting_started.html  test_mode_help.html
src/frontend/cellprofiler/gui/module_view/: _file_collection_display_controller.py  _module_view.py  _table_controller.py
src/frontend/cellprofiler/gui/preferences_dialog/: _preferences_dialog.py
src/frontend/cellprofiler/gui/readers_dialog/: _readers_dialog.py
src/frontend/cellprofiler/gui/utilities/: figure.py  icon.py  module_view.py  ndv.py
src/frontend/cellprofiler/gui/workspace_view/: _workspace_view.py
src/frontend/cellprofiler/icons/: __init__.py
src/frontend/cellprofiler/modules/: __init__.py  calculatemath.py  calculatestatistics.py  classifyobjects.py  closing.py  colortogray.py  combineobjects.py  convertimagetoobjects.py  convertobjectstoimage.py  correctilluminationapply.py  correctilluminationcalculate.py  createbatchfiles.py  crop.py  dilateimage.py  dilateobjects.py  displaydataonimage.py  displayscatterplot.py  enhanceedges.py  enhanceorsuppressfeatures.py  erodeimage.py  erodeobjects.py  expandorshrinkobjects.py  exporttodatabase.py  exporttospreadsheet.py  fillobjects.py  filterobjects.py  findmaxima.py  flagimage.py  flipandrotate.py  gaussianfilter.py  graytocolor.py  identifydeadworms.py  identifyobjectsingrid.py  identifyobjectsmanually.py  identifyprimaryobjects.py  identifyprimaryobjects3d.py  identifysecondaryobjects.py  identifytertiaryobjects.py  imagemath.py  makeprojection.py  (+37 more)
src/frontend/cellprofiler/modules/plugins/: segmentation_template.py  segmentationtemplatewithdependencies.py
src/frontend/cellprofiler/utilities/: morphology.py  rules.py
src/subpackages/core/: README.md  pyproject.toml  setup.cfg  setup.py
src/subpackages/core/.github/workflows/: test.yml
src/subpackages/core/cellprofiler_core/: __init__.py
src/subpackages/core/cellprofiler_core/analysis/: _analysis.py  _runner.py
src/subpackages/core/cellprofiler_core/analysis/event/: _paused.py
src/subpackages/core/cellprofiler_core/analysis/reply/: _exception_please_debug.py  _image_set_success.py  _image_set_success_with_dictionary.py  _no_work.py  _work.py
src/subpackages/core/cellprofiler_core/analysis/request/: _debug_complete.py  _measurements_report.py
src/subpackages/core/cellprofiler_core/bioformats/: __init__.py  formatreader.py  formatwriter.py
src/subpackages/core/cellprofiler_core/commands/: _worker_command.py
src/subpackages/core/cellprofiler_core/constants/: image.py  measurement.py  pipeline.py  worker.py
src/subpackages/core/cellprofiler_core/constants/modules/: images.py  load_data.py  namesandtypes.py
src/subpackages/core/cellprofiler_core/constants/reader/: __init__.py
src/subpackages/core/cellprofiler_core/image/: __init__.py  _image.py  _image_set.py  _image_set_list.py  _rgb_image.py
src/subpackages/core/cellprofiler_core/image/abstract_image/: __init__.py  (+2 more)
src/subpackages/core/cellprofiler_core/measurement/: _measurements.py  _metadata_group.py
src/subpackages/core/cellprofiler_core/module/: _identify.py  _image_processing.py  _module.py  _plugin_importer.py
src/subpackages/core/cellprofiler_core/modules/: align.py  injectimage.py  loaddata.py  measurementfixture.py  metadata.py  namesandtypes.py
src/subpackages/core/cellprofiler_core/object/: _objects.py  _segmentation.py
src/subpackages/core/cellprofiler_core/pipeline/: _image_file.py  _image_set_channel_descriptor.py  _listener.py  _pipeline.py
src/subpackages/core/cellprofiler_core/preferences/: __init__.py
src/subpackages/core/cellprofiler_core/reader/: __init__.py  _large_image_reader.py  _reader.py
src/subpackages/core/cellprofiler_core/readers/: bioformats_reader.py  gcs_reader.py  imageio_reader.py  imageio_reader_v3.py  ngff_reader.py  tiled_reader.py
src/subpackages/core/cellprofiler_core/setting/: __init__.py  _binary_matrix.py  _coordinates.py  _file_collection_display.py  _measurement.py  _setting.py  _settings_group.py
src/subpackages/core/cellprofiler_core/utilities/: analysis.py  hdf5_dict.py  image.py  java.py  logging.py  measurement.py  pathname.py
src/subpackages/core/cellprofiler_core/worker/: __init__.py  _pipeline_event_listener.py  _worker.py
src/subpackages/core/cellprofiler_core/workspace/: __init__.py  _workspace.py
src/subpackages/core/cellprofiler_core/writer/: __init__.py  _large_image_writer.py  _writer.py
src/subpackages/core/cellprofiler_core/writers/: tiled_writer.py
src/subpackages/core/docs/: constants.rst  module.rst  modules.rst  object.rst
(+4253 files in other folders)
