# build: sdist and wheel: python -m build
# test: pytest
# install: pip install [-e] .
# upload: twine upload dist/*
# check: twine check dist/*

[build-system]
# setuptools>=61 supports PEPs 517, 518, 621, 660
# https://setuptools.pypa.io/en/latest/history.html#v61-0-0
# setuptools-scm asks for setuptools>=64
# https://setuptools-scm.readthedocs.io/en/latest/
requires = ["setuptools>=64.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CellProfiler"
authors = [
    {name = "Anne Carpenter"},
    {name = "Thouis (Ray) Jones"},
    {name = "Lee Kamentsky"},
    {name = "Vebjorn Ljosa"},
    {name = "David Logan"},
    {name = "Mark Bray"},
    {name = "Madison Swain-Bowden"},
    {name = "Allen Goodman"},
    {name = "Claire McQuinn"},
    {name = "Beth Cimini", email = "bcimini@broadinstitute.org"},
    {name = "David Stirling", email = "dstirling@glencoesoftware.com"},
    {name = "Alice Lucas"},
    {name = "Nodar Gogoberidze", email = "ngogober@broadinstitute.org"},
    {name = "Callum Tromans-Coia"},
]
maintainers = [
    {name = "Beth Cimini", email = "bcimini@broadinstitute.org"},
    {name = "Nodar Gogoberidze", email = "ngogober@broadinstitute.org"},
]
description = """
CellProfiler is a free open-source software designed \
to enable biologists without training in computer vision \
or programming to quantitatively measure phenotypes from \
thousands of images automatically."""
readme = "README.md"
# we don't place upper bound pin for python:
# https://iscinumpy.dev/post/bound-version-constraints/#pinning-the-python-version-is-special
requires-python = ">=3.9"
# TODO: should be dynamic, top level, shared across all
license = {file = "LICENSE"}
keywords = ["computer vision", "image analysis", "biology", "cell", "cellprofiler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "cellprofiler-library>=5.dev",
    "cellprofiler-core>=5.dev",
    "boto3>=1.28.41",
    "centrosome>=1.3.0",
    "docutils==0.15.2",
    "h5py>=3.7.0",
    "imageio>=2.31.3",
    "Jinja2>=3.1.2",
    "joblib>=1.3.2",
    "mahotas>=1.4.13",
    "matplotlib>=3.1.3,<4",
    "mysqlclient>=2.2.3",
    "numpy>=1.24.4,<2",
    "Pillow>=10.0.0",
    "pyzmq>=22.3.0",
    "sentry-sdk~=2.8.0",
    "requests>=2.31.0",
    "scikit-image>=0.20.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.9.1,<1.11",
    "scyjava>=1.9.1",
    "six>=1.16.0",
    "tifffile>=2022.4.8",
    "wxPython>=4.2.0",
    "rapidfuzz>=3.0.0",
    "packaging>=20.0",
]
dynamic = ["version"]

[project.optional-dependencies]
build = ["build", "pyinstaller", "twine"]
docs = ["sphinx>=3.1.1", "sphinx-rtd-theme>=0.5.0"]
# pooch needed for scikit-image's example dataset,
# e.g. skimage.data.human_mitosis
# version pin should match scikit-image test requirements
# TODO: should be handled by nox or tox
test = ["pytest~=7.4.1", "pooch>=1.3.0"]

[project.scripts]
cellprofiler = "cellprofiler.__main__:main"

[project.urls]
Homepage = "https://cellprofiler.org/"
Documentation = "https://cellprofiler.org/manuals"
Wiki = "https://github.com/CellProfiler/CellProfiler/wiki"
Repository = "https://github.com/CellProfiler/CellProfiler"
Issues = "https://github.com/CellProfiler/CellProfiler/issues"
Changelog = "https://github.com/CellProfiler/CellProfiler/releases"

[tool.setuptools]
# true by default
include-package-data = true

# no need for this, automatic discovery works,
# but keeping in case of customizations needed later
# default exclusions for automatic discovery on flat-layout:
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#flat-layout
[tool.setuptools.packages.find]
where = ["."]
include = ["cellprofiler*"]
# enable PEP 420 namespace packages for cellprofiler/data dir
namespaces = true

[tool.setuptools.package-data]
"cellprofiler.data" = ["*.rst"]
"cellprofiler.gui" = ["*.html"]

[tool.setuptools_scm]
root = "../.."
# run pip install -e to get latest
version_file = "cellprofiler/_version.py"
# local scheme complies with PEP 440
# https://peps.python.org/pep-0440/#local-version-identifiers%3E
# but not accepted by TestPyPI and PyPi
# https://setuptools-scm.readthedocs.io/en/stable/usage/#default-versioning-scheme
local_scheme = "no-local-version"
